Fixed subimissions not showing

--- a/src/app/components/grade/grade.component.css
+++ b/src/app/components/grade/grade.component.css
@@ -32,8 +32,9 @@
 
 /* Expand collapsible when checkbox is checked */
 .toggle-checkbox:checked ~ .collapsible-content {
-    overflow: scroll;
-    height: 500px;
+    max-height: 500px;
+    overflow: auto;
+    visibility: visible;
     background-color: white;
     padding: 10px; /* add padding when expanded */
 }
